; ModuleID = '/home/carl/AnghaBench/git/compat/extr_hstrerror.c_githstrerror.c'
source_filename = "/home/carl/AnghaBench/git/compat/extr_hstrerror.c_githstrerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@githstrerror.buffer = internal global [48 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [37 x i8] c"Authoritative answer: host not found\00", align 1
@.str.1 = private unnamed_addr constant [45 x i8] c"Valid name, no data record of requested type\00", align 1
@.str.2 = private unnamed_addr constant [49 x i8] c"Non recoverable errors, FORMERR, REFUSED, NOTIMP\00", align 1
@.str.3 = private unnamed_addr constant [50 x i8] c"Non-authoritative \22host not found\22, or SERVERFAIL\00", align 1
@.str.4 = private unnamed_addr constant [25 x i8] c"Name resolution error %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @githstrerror(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %9 [
    i32 131, label %5
    i32 130, label %6
    i32 129, label %7
    i32 128, label %8
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %12

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %12

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %12

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %12

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @snprintf(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @githstrerror.buffer, i64 0, i64 0), i32 48, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.4, i64 0, i64 0), i32 %10)
  store i8* getelementptr inbounds ([48 x i8], [48 x i8]* @githstrerror.buffer, i64 0, i64 0), i8** %2, align 8
  br label %12

12:                                               ; preds = %9, %8, %7, %6, %5
  %13 = load i8*, i8** %2, align 8
  ret i8* %13
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
